--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# swc_common = "0.38.0"
-# with tty-emitter
+clap = { version = "4.5.17", features = ["derive"] }
+swc = "0.287.0"
 swc_common = { version = "0.38.0", features = ["tty-emitter"] }
+swc_core = "0.104.2"
 swc_ecma_ast = "0.119.0"
+swc_ecma_codegen = "0.156.1"
 swc_ecma_parser = "0.150.0"
+swc_ecma_transforms = "0.241.0"
 swc_ecma_visit = "0.105.0"
 swc_visit = "0.6.2"
